kustomize/monitoring/grafana-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana-ui-ingress
  namespace: monitoring
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.phils-home.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-stack-grafana 
            port:
              name: service
